--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="assets/favicon.17e50649.svg" />
+    <link rel="icon" type="image/svg+xml" href="/monsters-rolodex/assets/favicon.17e50649.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,8 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Bigelow+Rules&display=swap"
       rel="stylesheet"
     />
-    <script type="module" crossorigin src="assets/index.d0b5e647.js"></script>
-    <link rel="stylesheet" href="assets/index.8f8121bb.css">
+    <script type="module" crossorigin src="/monsters-rolodex/assets/index.d0b5e647.js"></script>
+    <link rel="stylesheet" href="/monsters-rolodex/assets/index.8f8121bb.css">
   </head>
   <body>
     <div id="root"></div>
